Fix mobile nav bar overflow

--- a/src/main/content/_assets/css/header.scss
+++ b/src/main/content/_assets/css/header.scss
@@ -161,7 +161,7 @@
                 font-size: 35px;
                 color: #FFFFFF;
                 padding: 5px 0px;
-                margin-left: 26px;
+                padding-left: 26px;
                 width: 100%;
                 box-sizing: border-box;
                 text-align: left;
